# skyfinder-dir

./: .gitignore  AGENT_HANDOFF.md  AGENT_PLAN.md  HYAK.md  README.md  SUMMARY.md  cam_cond_train.py  dino_finetune.py  infer_test.py  pyproject.toml  recover_results_from_last.py  run_baselines.py  run_sweep.py  submit_sweep.sh  summary.md
analysis_outputs/: agg_test.txt  agg_val.txt  boot_rn_few.txt  boot_rn_medium.txt  boot_rn_overall.txt  ensemble.txt  ensemble_fds.txt  percam_base.txt  percam_fds.txt  percam_ldsfds.txt  transfer_rn.txt  transfer_vit.txt
configs/: cam_cond.yaml  dino_finetune.yaml  dino_finetune_long.yaml  main.yaml  main_genval.yaml  main_random.yaml  main_random_dir.yaml  seeds.yaml  smoke.yaml
data/: download_images.py  filter_to_images.py  prep_labels.py  splits.py  splits_genval.py  splits_random.py
results/_analysis/: c1_constants.json  c2_metadata_only.json  ensemble_validation_selected.json  metadata_ablations.json
results/baseline_resnet50/: baseline_resnet50_fold0.json  baseline_resnet50_fold1.json  baseline_resnet50_fold2.json  baseline_resnet50_fold3.json  baseline_resnet50_fold4.json
results/baseline_vit/: baseline_vit_fold0.json  baseline_vit_fold1.json  (+3 more)
skyfinder/: __init__.py
slurm/: dino_finetune.slurm  dino_finetune_long.slurm  dino_probe.slurm  fusion.slurm  infer_test.slurm  metadata_closure.slurm  recover_json_cpu.slurm  residual.slurm  run_sweep.slurm  setup_env.slurm
tests/: test_analysis_metadata.py  test_checkpoint_routing.py  test_metadata_solar.py  test_migrate.py  test_splits.py  test_splits_genval.py
(+83 files in other folders)
