[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dir-skyfinder"
version = "0.3.0"
description = "Deep Imbalanced Regression on SkyFinder — clean rebuild (training + metadata baselines)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=9.5",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyarrow>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["skyfinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I", "UP", "B"]
